tests/negative/typecheck/sliceof_arr.orng
fn main() -> Int {
    let x: [3]Char = ('a', 'b', 'c')
    let y: []Int = [3]x
    0
}